add pawn captures to pawn legal moves (non en passant)